[package]
name = "tokio_chat"
version = "0.1.0"
authors = ["naokilh <821874555@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "*"
futures-util = "*"
